--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -27,7 +27,9 @@
               class: 'search-form-control'
             = button_tag "Search", :name => nil, class: 'hide'
             = label_tag :sort, 'Sort by:', class: 'search-form-label'
-            = text_field_tag :sort, params[:search],
+            -#= select_tag :sort, "<option>%#{params[:sort]}%</option><option>2</option><option>3</option><option>4</option>".html_safe,
+              -#class: 'search-form-control'
+            = text_field_tag :sort, params[:sort],
               class: 'search-form-control'
             = button_tag "Sort", :name => nil, class: 'hide'
           %p.search-proposals
