--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -2,7 +2,8 @@
   %td
     = image_tag user.picture_url
     = link_to user_path(user) do
-      = user.name
+      = sortable(user.name)
+
   %td= user.position_name
   %td
     = link_to 'Edit', edit_user_path(user)
