--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -23,9 +23,9 @@
             = label_tag :search, 'Search', class: 'search-form-label'
             = text_field_tag :search, params[:search],
               class: 'search-form-control'
-            = label_tag :sort, 'Sort by:', class: 'search-form-label'
-            = text_field_tag :sort, params[:search],
-              class: 'search-form-control'
+            -#= label_tag :sort, 'Sort by:', class: 'search-form-label'
+            -#= text_field_tag :sort, params[:search],
+              -#class: 'search-form-control'
           %p.search-proposals
             = link_to 'Nominate someone', '#',
               class: 'search-proposals-nominate'
