--- a/app/views/users/my_badges.html.haml
+++ b/app/views/users/my_badges.html.haml
@@ -20,9 +20,9 @@
             = text_field_tag :search, params[:search],
               class: 'search-form-control'
             = button_tag "Search", :name => nil, class: 'hide'
-            = label_tag :sort, 'Sort by:', class: 'search-form-label'
-            = text_field_tag :sort, params[:search],
-              class: 'search-form-control'
+            -#= label_tag :sort, 'Sort by:', class: 'search-form-label'
+            -#= text_field_tag :sort, params[:search],
+              -#class: 'search-form-control'
           %p.search-proposals
             = link_to 'Nominate someone', '#',
               class: 'search-proposals-nominate'
