Create skills rake task
* Updates edit view with the proper collection
* Fix issue with skills task
* Fix specs for user views
* Adds code in the users controller that should go to a helper

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -9,7 +9,9 @@
       .col-sm-10
         .panel.panel-default
           .panel-body
-            = f.association :skills, as: :check_boxes
+            = f.association :skills,
+              as: :check_boxes,
+              collection: @skills
       - if current_user.is_admin?
         .col-sm-10
           .panel.panel-default
