--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -11,12 +11,12 @@
           .panel-body
             = f.association :skills,
               as: :check_boxes,
-              collection: @skills
+              collection: get_skills
       - if current_user.is_admin?
         .col-sm-10
           .panel.panel-default
             .panel-body
-              =f.association :badges, as: :check_boxes
+              = f.association :badges, as: :check_boxes
       .col-sm-12
         = f.submit
         = link_to 'Back to Dashboard', user_path(@user)
