Create skills rake task
* Adds scope to skills model
* Refactor code in users helper
* Fix helper method call in edit user view

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -11,7 +11,7 @@
           .panel-body
             = f.association :skills,
               as: :check_boxes,
-              collection: get_skills
+              collection: get_skills(@user.department)
       - if current_user.is_admin?
         .col-sm-10
           .panel.panel-default
