Adds missing styles for badge show view
* Adds a position relative to badge-presenter
* Adds new html elements for badges show view

--- a/app/assets/stylesheets/modules/badge-presenter.sass
+++ b/app/assets/stylesheets/modules/badge-presenter.sass
@@ -1,9 +1,11 @@
 .badge-presenter
   background: $white
   margin-bottom: 15px
+  position: relative
 
 .badge-presenter-image
   float: left
+  position: relative
   width: 55%
 
 .badge-presenter-info
