--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -23,9 +23,9 @@
             = label_tag :search, 'Search', class: 'search-form-label'
             = text_field_tag :search, params[:search],
               class: 'search-form-control'
-            -#= label_tag :sort, 'Sort by:', class: 'search-form-label'
-            -#= text_field_tag :sort, params[:search],
-              -#class: 'search-form-control'
+            = label_tag :sort, 'Sort by:', class: 'search-form-label'
+            = text_field_tag :sort, params[:search],
+              class: 'search-form-control'
           %p.search-proposals
             = link_to 'Nominate someone', '#',
               class: 'search-proposals-nominate'
@@ -43,6 +43,9 @@
         .col-md-12
           .badge-presenter-image
             = image_tag @badge.image_url
+            .earned
+              Earned in July 2014
+              %span.earned-icon
           .badge-presenter-info
             %h1.badge-presenter-title= @badge.name
             %strong Description:
@@ -52,6 +55,12 @@
             %p= show_value(@badge.value)
             %hr.badge-presenter-separator
             %strong Path:
+            .earned-social-media
+              Share
+              %span.earned-social-media-twitter
+              %span.earned-social-media-facebook
+              %span.earned-social-media-google
+              %span.earned-social-media-linkedin
     .span9.badge-winners
       %header.badge-winners-header
         %h3.badge-winners-title Who else has it?
