--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -43,9 +43,7 @@
         .col-md-12
           .badge-presenter-image
             = image_tag @badge.image_url
-            .earned
-              Earned in July 2014
-              %span.earned-icon
+            = render_partial?(@badge.users, 'earned')
           .badge-presenter-info
             %h1.badge-presenter-title= @badge.name
             %strong Description:
@@ -55,12 +53,7 @@
             %p= show_value(@badge.value)
             %hr.badge-presenter-separator
             %strong Path:
-            .earned-social-media
-              Share
-              %span.earned-social-media-twitter
-              %span.earned-social-media-facebook
-              %span.earned-social-media-google
-              %span.earned-social-media-linkedin
+            = render_partial?(@badge.users, 'social_media')
     .span9.badge-winners
       %header.badge-winners-header
         %h3.badge-winners-title Who else has it?
