Add disabled image
For all badges that user not earned

--- a/app/views/shared/_badge.html.haml
+++ b/app/views/shared/_badge.html.haml
@@ -1,5 +1,5 @@
 %div{ class: define_badge_column }
-  = image_tag badge.image_url
+  = image_tag badge.image_url, {class: unknown_image?(badge) }
   .badge-info-inside
     %h5.badge-name
       = badge.name
