--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -144,3 +144,12 @@
   color: $gray-light
   margin-left: -25px
   vertical-align: 17px
+
+.unknown-image
+  -moz-transition: all 1s ease
+  -ms-transition: all 1s ease
+  -o-transition: all 1s ease
+  -webkit-filter: blur(5px)
+  -webkit-transition: all 1s ease
+  opacity: 0.3
+  transition: all 1s ease
