--- a/app/views/badges_engine/badges/show.html.haml
+++ b/app/views/badges_engine/badges/show.html.haml
@@ -3,7 +3,7 @@
 = content_for :actions do
   = render partial: 'shared/actions'
 
-.admin-users-list
+.admin-list
   %header
     %h1 Manage Badges
     = render partial: 'search', locals: { badges: @badges }
