--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -1,5 +1,5 @@
 .admin-settings-header
-  background: #fff
+  background: $white
   border-bottom: 1px solid $pink-50
   height: 70px
 
@@ -68,11 +68,11 @@
       height: 68px
       width: 150px
       &:active, &:hover
-        background: #fff
+        background: $white
         .carpet-down
           border-left: 10px solid transparent
           border-right: 10px solid transparent
-          border-top: 10px solid #fff
+          border-top: 10px solid $white
           bottom: 10px
           height: 0
           margin: 0 auto
@@ -121,7 +121,7 @@
     a
       background: $pink-50
       bottom: 0px
-      color: #fff
+      color: $white
       float: right
       left: 389px
       padding: 7px 20px
@@ -132,7 +132,7 @@
       background: #f8f8f8
       padding: 15px
     tbody
-      background: #fff
+      background: $white
     tbody tr td
       border-top: 1px solid $pink-50
       height: 70px
