Replacing missing colors

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -7,7 +7,7 @@
   float: left
   width: 50%
   h1
-    color: #aa392d
+    color: $orange-dark
     font-family: roboto
     font-size: 20px
     font-style: normal
@@ -25,7 +25,7 @@
   float: right
   width: 50%
   a
-    color: #aa392d
+    color: $orange-dark
     float: right
     font-family: roboto
     font-weight: bold
@@ -89,7 +89,7 @@
     border-bottom: 1px solid $pink-50
     height: 70px
     h1
-      color: #aa392d
+      color: $orange-dark
       font-family: roboto
       font-size: 20px
       font-style: normal
