--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -56,7 +56,7 @@
       p:first-child
         background: pink
         border-radius: 80px
-        color: #fff
+        color: $white
         margin-bottom: 2px
       p:last-child
         bottom: 22px
@@ -73,7 +73,7 @@
         border-left: none
 
 .form-badge
-  background: #fff
+  background: $white
   margin-top: -19px
   a
     color: $pink-50
@@ -109,7 +109,7 @@
   .btn
     background: $pink-25
     border: 0
-    color: #fff
+    color: $white
     width: 100px
   .btn-disabled
     opacity: 0.65
