Add missing colors

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -1,18 +1,19 @@
 $black: #000
 
-$gray-dark: #282928
+$gray-50: #535553
 $gray-25: #A5A2A2
-$gray: #EDEDED
+$gray-dark: #282928
 $gray-light: #939393
 $gray-lighter: #F8F8F8
+$gray: #EDEDED
 
+$orange-dark: #AA392D
 $orange-light: #F7BE7B
 $orange: #D44928
-$orange-dark: #AA392D
 
 $pink-100: #F9DDDA
-$pink-50: #EAA399
 $pink-25: #EBA299
+$pink-50: #EAA399
 $pink-light: #F8E3E0
 
 $yellow: #EF911F
