--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -10,7 +10,7 @@
   h5
     font-weight: bold
   h2
-    color: #000
+    color: $black
     font-size: 40px
     font-weight: 200
     margin-top: 25px
@@ -51,10 +51,10 @@
       text-align: center
       width: 25px
       p
-        color: black
+        color: $black
         width: 23px
       p:first-child
-        background: pink
+        background: $pink-100
         border-radius: 80px
         color: $white
         margin-bottom: 2px
@@ -63,7 +63,7 @@
         left: 34px
         position: relative
     span
-      border-left: 1px solid pink
+      border-left: 1px solid $pink-100
       display: block
       height: 7px
       left: 11px
@@ -117,7 +117,7 @@
     input
       background: rgb(239, 238, 238)
       border-radius: 0
-      border: 1px solid #535553
+      border: 1px solid $gray-50
       color: $gray-dark
       font-family: roboto
       width: 175px
