--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -63,7 +63,7 @@
   nav .nav
     border-bottom: 1px solid $gray
     a
-      color: #000
+      color: $black
       float: left
       height: 68px
       width: 150px
@@ -85,7 +85,7 @@
 .admin-list
   margin-top: -20px
   header
-    background: #f8f8f8
+    background: $gray-lighter
     border-bottom: 1px solid $pink-50
     height: 70px
     h1
@@ -129,7 +129,7 @@
       text-align: center
   table
     tbody > tr > th
-      background: #f8f8f8
+      background: $gray-lighter
       padding: 15px
     tbody
       background: $white
