--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -39,15 +39,6 @@
   margin: 0 5px 0 0
   width: 70px
 
-.mid-flag-corner
-  background: image_url('sprite-badges.png') -51px -796px
-  float: right
-  height: 67px
-  left: 20px
-  position: relative
-  top: -40px
-  width: 50px
-
 .search-glass
   background: image_url('sprite-badges.png') -30px -174px
   height: 28px
@@ -67,13 +58,13 @@
       float: left
       height: 68px
       width: 150px
-      &:active, &:hover
+      &:active, &:hover, &.active
         background: $white
         .carpet-down
           border-left: 10px solid transparent
           border-right: 10px solid transparent
           border-top: 10px solid $white
-          bottom: 10px
+          bottom: 11px
           height: 0
           margin: 0 auto
           position: relative
