Add corresponding color flag in header

--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -130,3 +130,12 @@
     button
       background: transparent
       border: 0
+
+.mid-flag-badge-corner
+  background: image_url('sprite-badges.png') -12px -796px
+  float: right
+  height: 67px
+  left: 20px
+  position: relative
+  top: -40px
+  width: 50px
