--- a/app/assets/stylesheets/modules/admin-user.sass
+++ b/app/assets/stylesheets/modules/admin-user.sass
@@ -5,3 +5,12 @@
   left: 0px
   position: relative
   width: 35px
+
+.mid-flag-user-corner
+  background: image_url('sprite-badges.png') -51px -796px
+  float: right
+  height: 67px
+  left: 20px
+  position: relative
+  top: -40px
+  width: 50px
