Add footers for admin user and badge

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -132,3 +132,14 @@
       border-radius: 80px
       width: 40px
 
+.admin-footer.badges-footer-separator
+  background: $white
+  margin-top: -20px
+  .users-footer-icon
+    background: image_url('sprite-badges.png') -89px -720px no-repeat
+    display: inline-block
+    position: absolute
+    width: 55px
+    height: 60px
+    top: -4px
+    right: -9px
