--- a/app/views/badges_engine/badges/index.html.haml
+++ b/app/views/badges_engine/badges/index.html.haml
@@ -4,3 +4,5 @@
   = render partial: 'shared/actions'
 
 = render partial: 'badges_list', locals: { badges: @badges }
+
+= render 'shared/admin_footer'
