--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -42,7 +42,7 @@
       .row
         .col-md-12
           .badge-presenter-image
-            = image_tag @badge.image_url
+            = image_tag @badge.image_url, { class: unknown_image?(@badge) }
           .badge-presenter-info
             %h1.badge-presenter-title= @badge.name
             %strong Description:
