--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -16,6 +16,20 @@
   img
     position: relative
 
+= filter($pixels)
+  -moz-filter: blur($pixels)
+  -ms-filter: blur($pixels)
+  -o-filter: blur($pixels)
+  -webkit-filter: blur($pixels)
+  filter: blur($pixels)
+
+= transition($transition)
+  -moz-transition: $transition
+  -ms-transition: $transition
+  -o-transition: $transition
+  -webkit-transition: $transition
+  transition: $transition
+
 .badges
   background-color: $white
 
@@ -146,10 +160,6 @@
   vertical-align: 17px
 
 .unknown-image
-  -moz-transition: all 1s ease
-  -ms-transition: all 1s ease
-  -o-transition: all 1s ease
-  -webkit-filter: blur(5px)
-  -webkit-transition: all 1s ease
+  +filter(5px)
+  +transition(all 1s ease)
   opacity: 0.3
-  transition: all 1s ease
