--- a/app/views/badges/_social_media.html.haml
+++ b/app/views/badges/_social_media.html.haml
@@ -1,4 +1,7 @@
-.earned-social-media
+-# This section does not have functionality... but the styles
+-# is already defined. When you have the functionality, please
+-# uncomments these html
+-#.earned-social-media
   Share
   %span.earned-social-media-twitter
   %span.earned-social-media-facebook
