Add good look and feel 1st phase

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -5,12 +5,14 @@ $gray-25: #A5A2A2
 $gray-dark: #282928
 $gray-light: #939393
 $gray-lighter: #F8F8F8
+$gray-input: #efeeee
 $gray: #EDEDED
 
 $orange-dark: #AA392D
 $orange-light: #F7BE7B
 $orange: #D44928
 
+$pink-darker: #EC8E81
 $pink-100: #F9DDDA
 $pink-25: #EBA299
 $pink-50: #EAA399
