--- a/app/assets/stylesheets/modules/user-edit.sass
+++ b/app/assets/stylesheets/modules/user-edit.sass
@@ -1,5 +1,5 @@
 .user-container
-  background: #fff
+  background: $white
 
 .panel
   label
@@ -7,16 +7,16 @@
     margin-bottom: 10px
 
 .edit-user-info
-  background: #fff
+  background: $white
   margin-left: 10px
   h1
     font-family: 'Roboto'
-    font-size: 14px
     color: $orange
     font-size: 24px
-    margin-bottom: 15px
-    margin-top: 36px
     text-align: left
+    float: right
+    margin-top: 40px
+    margin-right: 84px
   input
     background: $gray-input
     border-radius: 0
@@ -42,6 +42,11 @@
 .head-title
   width: 290px
   float: left
+  .badges-header-image
+    background: url(/assets/sprite-badges.png) -95px -585px no-repeat
+    position: relative
+    top: 28px
+    float: left
 
 .header-actions
   width: 290px
@@ -55,12 +60,12 @@
   width: 400px
   float: right
   a
-    color: #fff
+    color: $white
   .btn
     background: $pink-50
     padding: 16px 65px
     margin-bottom: 5px
-    color: #fff
+    color: $white
     &:hover
       background-color: $pink-darker
       transition: background-color 300ms ease-out
@@ -72,7 +77,7 @@
 .user-footer
   height: 50px
   width: 1170px
-  background: #fff
+  background: $white
   margin-bottom: 15px
   border-top: 1px solid $pink-50
 
