--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -102,8 +102,19 @@
   transition: top 0.5s linear
   &:hover
     top: -138px
+    .badge-earned-icon
+      display: none
     .badge-description, .badge-details-link
       opacity: 1
+
+.badge-earned-icon
+  background: image_url('sprite-badges.png') -45px -1425px no-repeat
+  height: 30px
+  margin-right: -15px
+  position: absolute
+  top: -25px
+  width: 30px
+  right: 50%
 
 .badge-description
   background-color: rgba(255, 255, 255, 0.9)
