Fix broken image for edit user

--- a/app/assets/stylesheets/modules/user-edit.sass
+++ b/app/assets/stylesheets/modules/user-edit.sass
@@ -43,7 +43,7 @@
   width: 290px
   float: left
   .badges-header-image
-    background: url(/assets/sprite-badges.png) -95px -585px no-repeat
+    background: image_url('sprite-badges.png') -95px -585px no-repeat
     position: relative
     top: 28px
     float: left
