--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,8 +6,9 @@
         %h1 Edit user info
       .header-actions
         = link_to 'Back to Dashboard', user_path(@user)
-        |
-        = link_to 'Back to Admin', admin_users_path if current_user.is_admin?
+        - if current_user.is_admin?
+          |
+          = link_to 'Back to Admin', admin_users_path
     = simple_form_for @user do |f|
       .col-sm-12
         %h4= f.input :name
