--- a/app/views/shared/_badge.html.haml
+++ b/app/views/shared/_badge.html.haml
@@ -1,6 +1,6 @@
 %div{ class: define_badge_column }
   = image_tag badge.image_url, { class: unknown_image?(badge) }
-  .badge-info-inside
+  .badge-info
     = badge_earn_icon(badge)
     %h5.badge-name
       = badge.name
