--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -11,9 +11,9 @@
     font-weight: bold
   h2
     color: $black
-    font-size: 40px
+    font-size: 1.4em
     font-weight: 200
-    margin-top: 25px
+    margin-top: 40px
     text-transform: capitalize
   .col-md-4
     margin: -8px
@@ -62,6 +62,8 @@
         bottom: 22px
         left: 34px
         position: relative
+        text-align: left
+        width: 300px
     span
       border-left: 1px solid $pink-100
       display: block
