Add style to notice message and also helper method

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,7 +8,7 @@
       .header-vertical-line
       .container
         = yield :user_details
-    = notice
+    = render 'shared/flash_message'
     #content
       .container
         = yield :actions
