Refactor default empty message

--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -57,8 +57,9 @@
 .badges-all
   border-top: 1px solid $white
   overflow: auto
-  p
-    margin-left: 14px
+
+.badges-default-message
+  margin-left: 14px
 
 .badges-footer
   background: image_url('sprite-badges.png') -15px -650px no-repeat
