Fixed links bug on badges page

--- a/app/views/shared/_propose_badge.html.haml
+++ b/app/views/shared/_propose_badge.html.haml
@@ -34,8 +34,8 @@
         .span8
           %p
             do you know who deserves it?
-            = link_to 'Nominate someone', '#', class: 'request-link'
+            = link_to 'Nominate someone', '#', class: 'request-link propose-nomination'
       .col-sm-4
         .span4
           = f.submit 'Create', class: 'request-btn-submit'
-          = link_to 'Cancel', '#', class: 'request-btn-cancel'
+          = link_to 'Cancel', '#', class: 'request-btn-cancel cancel-proposal'
