--- a/app/views/shared/_nominee_user.html.haml
+++ b/app/views/shared/_nominee_user.html.haml
@@ -33,8 +33,8 @@
         .span8
           %p
             Can't find the badge?
-            = link_to 'Propose a new one', '#', class: 'request-link'
+            = link_to 'Propose a new one', '#', class: 'request-link propose-proposal'
       .col-sm-4
         .span4
           = f.submit 'Nominate', class: 'request-btn-submit'
-          = link_to 'Cancel', '#', class: 'request-btn-cancel'
+          = link_to 'Cancel', '#', class: 'request-btn-cancel cancel-nomination'
