Added design changes

--- a/app/assets/stylesheets/modules/google_sign_in.sass
+++ b/app/assets/stylesheets/modules/google_sign_in.sass
@@ -18,17 +18,20 @@
 
 .google-sign-in-info
   color: black
+  display: block
   font-size: 14px
   line-height: 16px
-  padding: 20px 0px 15px 97px
+  padding: initial
   text-align: left
   text-transform: uppercase
-  a
-    color: black
-    &:hover
-      color: $orange
-      text-decoration: none
-      transition: color 0.5s
+  color: black
+  p
+    padding: 21px 43px 21px 89px
+    text-align: center
+  &:hover
+    color: $orange
+    text-decoration: none
+    transition: color 0.5s
 
 .google-sign-in-decorator
   background: image_url('sprite-badges.png') -18px -874px
