Adds voting functionality
* Adds link for vote MVP
* Fixes style for links

--- a/app/assets/stylesheets/modules/search_form.sass
+++ b/app/assets/stylesheets/modules/search_form.sass
@@ -21,7 +21,7 @@
   display: inline-block
   margin-top: 15px
   vertical-align: 23px
-  width: 50%
+  width: 40%
 
 .search-form-label
   font-weight: 500
@@ -38,14 +38,14 @@
   float: right
   margin-top: 15px
   text-align: center
-  width: 33.33%
+  width: 50%
 
 .search-proposals-nominate
   background: $orange-light
   color: $white
   float: right
   padding: 8px 18px
-  width: 50%
+  width: 33.33%
 
 .search-proposals-propose
   background: $pink-25
@@ -53,4 +53,8 @@
   color: $white
   float: right
   padding: 8px 18px
-  width: 50%
+  width: 33.33%
+
+.search-proposals-mvp
+  @extend .search-proposals-nominate
+  border-right: 1px solid $white
