--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -31,6 +31,8 @@
               class: 'search-proposals-nominate'
             = link_to 'Propose a badge', '#',
               class: 'search-proposals-propose'
+            = link_to 'Vote MVP', '#',
+              class: 'search-proposals-mvp'
       = render partial: 'shared/nominee_user'
       = render partial: 'shared/propose_badge'
 .row
