--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -19,3 +19,8 @@
             %p Badges
             .badge-admin-icon
             .carpet-down
+        %li
+          = link_to admin_votings_path, id: 'admin-mvp-link'do
+            %p MVP
+            .badge-admin-icon
+            .carpet-down
