--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -79,6 +79,8 @@
     background: $gray-lighter
     border-bottom: 1px solid $pink-50
     height: 70px
+    .mvp
+      position: static
     h1
       color: $orange-dark
       font-family: roboto
