Adds voting functionality
* Renamed voting controller to votations controller
* Renamed voting views to votation views
* Fix link to helpers in admin views

--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -20,7 +20,7 @@
             .badge-admin-icon
             .carpet-down
         %li
-          = link_to admin_votings_path, id: 'admin-mvp-link'do
+          = link_to admin_votations_path, id: 'admin-mvp-link'do
             %p MVP
             .badge-admin-icon
             .carpet-down
