--- a/app/views/admin/votations/index.html.haml
+++ b/app/views/admin/votations/index.html.haml
@@ -5,16 +5,16 @@
 .admin-list
   %header
     %h1 MVP section (current votations for #{ Date.today.strftime('%B %Y') })
-    = link_to 'create a new MVP votation', new_admin_voting_path
+    = link_to 'create a new MVP votation', new_admin_votation_path, class: 'mvp'
   %table.table
     %tbody
       %tr
         %th Badge
         %th Manage module
     %tbody
-      - @votings.each do |voting|
+      - @votations.each do |votation|
         %tr
-          %td= voting.badge.name
+          %td= votation.badge.name
           %td
             = link_to 'Delete', '#', class: 'action-control-section'
             |
