Add missing parts for emails
* Adds Kardex to nominate user mailer
* Adds Kardex to propose badge mailer
* Adds link to kardex's admin in mails

--- a/app/views/nominate_user_mailer/nominate_user_notification.html.haml
+++ b/app/views/nominate_user_mailer/nominate_user_notification.html.haml
@@ -16,3 +16,6 @@
       %li
         Why:
         = @nominated_user.why
+    %p
+      You can check more information
+      = link_to 'here!', admin_root_url
