Adds voting functionality
* Fix issue with html in admin section
* Adds link to votations in badges#show view
* Adds more links in partials
* Adds votation routes in config/routes

--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -15,12 +15,12 @@
             .user-admin-icon
             .carpet-down
         %li
-          = link_to badges_engine.badges_path, id: 'admin-badge-link'do
+          = link_to badges_engine.badges_path, id: 'admin-badge-link' do
             %p Badges
             .badge-admin-icon
             .carpet-down
         %li
-          = link_to admin_votations_path, id: 'admin-mvp-link'do
-            %p MVP
+          = link_to admin_votations_path, id: 'admin-mvp-link' do
+            %p Votations
             .badge-admin-icon
             .carpet-down
