--- a/app/views/admin/votations/new.html.haml
+++ b/app/views/admin/votations/new.html.haml
@@ -7,7 +7,7 @@
     %h1 MVP section (current votations for #{ Date.today.strftime('%B %Y') })
 .col-sm-12.form-badge
   = simple_form_for [:admin, @votation] do |f|
-    = if @votation.errors.any?
+    - if @votation.errors.any?
       #error_explanation
         %h2
           = pluralize(@votation.errors.count, 'error')
