--- a/app/assets/stylesheets/layouts/content.sass
+++ b/app/assets/stylesheets/layouts/content.sass
@@ -1,8 +1,14 @@
+html, body
+  height: 100%
+#wrapper
+  background: $gray
+  margin: 0 auto -60px
+  min-height: 100%
 #content
   background: $gray
   width: 100%
   .container
-    min-height: 410px
+    min-height: 100%
   .crowdint-logo
     display: block
     margin: 0 auto
