--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -1,6 +1,7 @@
 #footer
-  width: 100%
   background: $white
+  height: 60px
+  width: 100%
   ul
     list-style-type: none
     li
@@ -8,3 +9,5 @@
       margin: 12px auto
     .crowdint-logo
       display: none
+.push
+  height: 60px
