--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -3,14 +3,16 @@
   %head
     = render 'layouts/head'
   %body
-    %header.header.header-home
-      .header-right
-      .header-left
-      .circle
-    = notice
-    #content
-      .container
-        = yield
+    #wrapper
+      %header.header.header-home
+        .header-right
+        .header-left
+        .circle
+      = notice
+      #content
+        .container
+          = yield
+      .push
     %footer#footer
       .container
         %ul
