--- a/app/views/users/my_badges.html.haml
+++ b/app/views/users/my_badges.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-12.adjust-dashboard
+  .col-md-12.user-adjust-dashboard
     .span12.badges
       %header.badges-header-container
         %h3.badges-header
