--- a/app/views/admin/votations/new.html.haml
+++ b/app/views/admin/votations/new.html.haml
@@ -17,7 +17,7 @@
             %li= msg
     .span12
       .field
-        = f.hidden_field :created_at, value: Date.today
+        = f.hidden_field :date, value: Date.today.strftime('%B %Y')
       .field
         = f.input :badge_id,
           collection: BadgesEngine::Badge.all,
