Adds voting functionality
* Adds dependent: :destroy for votation and votes
* Changes MVP title for votation title
* Adds condition on previous and index view

--- a/app/views/admin/votations/new.html.haml
+++ b/app/views/admin/votations/new.html.haml
@@ -4,7 +4,7 @@
   = render partial: 'shared/actions'
 .admin-list
   %header
-    %h1 MVP section (current votations for #{ Date.today.strftime('%B %Y') })
+    %h1 Current votations for #{ Date.today.strftime('%B %Y') }
 .col-sm-12.form-badge
   = simple_form_for [:admin, @votation] do |f|
     - if @votation.errors.any?
