--- a/app/views/admin/votations/previous.html.haml
+++ b/app/views/admin/votations/previous.html.haml
@@ -7,23 +7,26 @@
     %h1 All previous votations
     = link_to 'Create a new MVP votation', new_admin_votation_path, class: 'mvp'
     = link_to 'Check current votations', admin_votations_path, class: 'mvp'
-  %table.table
-    %tbody
-      %tr
-        %th Badge
-        %th Active
-        %th Date
-        %th Manage module
-    %tbody
-      - @votations.each do |votation|
+  - if @votations.any?
+    %table.table
+      %tbody
         %tr
-          %td= votation.badge.name
-          %td= votation.is_open
-          %td= votation.date
-          %td
-            = link_to 'Delete', admin_votation_path(votation),
-              method: :delete,
-              data: { confirm: 'Are you sure?' },
-              class: 'action-control-section'
-            |
-            = link_to 'Check votation info', admin_votation_path(votation), class: 'action-control-section'
+          %th Badge
+          %th Active
+          %th Date
+          %th Manage module
+      %tbody
+        - @votations.each do |votation|
+          %tr
+            %td= votation.badge.name
+            %td= votation.is_open
+            %td= votation.date
+            %td
+              = link_to 'Delete', admin_votation_path(votation),
+                method: :delete,
+                data: { confirm: 'Are you sure?' },
+                class: 'action-control-section'
+              |
+              = link_to 'Check votation info', admin_votation_path(votation), class: 'action-control-section'
+  - else
+    %h3 We don't have archived votations (╯°□°)╯︵ ┻━┻
