Fix styles broken badges path

--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -44,7 +44,7 @@
       width: 50%
     &:last-child
       border-bottom: none
-      height: 40px
+      height: auto
     li
       height: 18px
       list-style: none
