Adds voting functionality
* Fix links an all votation section
* Remove votation from main menu
* Fix specs

--- a/app/views/admin/votations/new.html.haml
+++ b/app/views/admin/votations/new.html.haml
@@ -25,5 +25,6 @@
           label_method: :name,
           prompt: 'Select a badge'
       .actions
+        = link_to 'Return to votation index', admin_votations_path
         = f.submit 'Save', class: 'btn'
 .clearfix
