Adds color darkorange for create new votation

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -8,6 +8,8 @@ $gray-lighter: #F8F8F8
 $gray-input: #efeeee
 $gray: #EDEDED
 
+$darkorange: #F38B1A
+
 $orange-dark: #AA392D
 $orange-light: #F7BE7B
 $orange: #D44928
