--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -81,6 +81,9 @@
     height: 70px
     .mvp
       position: static
+    .mvp-orange
+      position: static
+      background: $darkorange
     h1
       color: $orange-dark
       font-family: roboto
