fix color and text for button

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -79,6 +79,8 @@
     background: $gray-lighter
     border-bottom: 1px solid $pink-50
     height: 70px
+    .orange
+      background: $darkorange
     .mvp
       position: static
     .mvp-orange
