fix typo in votation index

--- a/app/views/votations/index.html.haml
+++ b/app/views/votations/index.html.haml
@@ -35,4 +35,4 @@
             .span4
               = f.submit 'Create', class: 'request-btn-submit'
               = link_to 'Cancel', '#', class: 'request-btn-cancel js-cancel-proposal'
-  %h3 Thanks for your voto!
+  %h3 Thanks for your vote!
