Add pretty flash messages

--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -8,7 +8,7 @@
         .header-right
         .header-left
         .circle
-      = notice
+      = render 'shared/flash_message'
       #content
         .container
           = yield
