--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
       .header-right
       .header-left
       .circle
-    = notice
+    = render 'shared/flash_message'
     #content
       .container
         = yield
