--- a/app/views/layouts/dashboards.html.haml
+++ b/app/views/layouts/dashboards.html.haml
@@ -8,7 +8,7 @@
         .header-vertical-line
         =link_to '', user_path(current_user), class: 'circle'
         .welcome-image
-      = notice
+      = render 'shared/flash_message'
       #content
         .container
           = yield
